Bug #7184
closed--disable-gems commandline parameter does not show up with ruby -h
Description
The --disable-gems commandline parameter, as documented in The Ruby Programming Language, is not listed when exploring the options with 'ruby -h'.
Updated by drbrain (Eric Hodel) almost 14 years ago
- Target version changed from 1.9.3 to 2.0.0
There are many options that do not show up with --help including all of the --disable-feature options.
I believe that historically --help hasn't show all of the options ruby supports in order to allow --help to fit on one screen.
You can view these options on the man page.
Updated by nobu (Nobuyoshi Nakada) almost 14 years ago
Yes, another idea is adding a new option to show all.
Updated by usa (Usaku NAKAMURA) almost 14 years ago
Hello,
In message "[ruby-core:48081] [ruby-trunk - Bug #7184] --disable-gems commandline parameter does not show up with ruby -h"
on Oct.19,2012 11:41:49, nobu@ruby-lang.org wrote:
Yes, another idea is adding a new option to show all.
For instance, -h to short help, and --help to long help ?
Regards,¶
U.Nakamura usa@garbagecollect.jp
Updated by duerst (Martin Dürst) almost 14 years ago
On 2012/10/19 12:02, U.Nakamura wrote:
Hello,
In message "[ruby-core:48081] [ruby-trunk - Bug #7184] --disable-gems commandline parameter does not show up with ruby -h"
on Oct.19,2012 11:41:49,nobu@ruby-lang.org wrote:Yes, another idea is adding a new option to show all.
For instance, -h to short help, and --help to long help ?
Yes, please, something like this. Remove one of the options showing up
currently so that the "show all options" option can be added to the list
that will fit in one screen. Then people can use the "show all options"
option to look at the whole list, and those that want the screen to fit
on 24 lines (which I think includes Matz) are happy, too. As for which
option to removed from the short list, I can make some suggestions if
it's necessary. But there are many that don't look terribly important.
Regards, Martin.
Updated by nobu (Nobuyoshi Nakada) almost 14 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r37298.
siep, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
ruby.c: --help option
- ruby.c (usage, process_options): show more info in --help.
[EXPREIMENTAL] [ruby-core:48072] [Bug #7184]
Updated by nobu (Nobuyoshi Nakada) almost 14 years ago
- Status changed from Closed to Open
- % Done changed from 100 to 0
tadf reverted this feature.
Updated by tadf (tadayoshi funaba) almost 14 years ago
i reverted your commit, not feature or bug.
you reverted a test.
matz wants to print -h in a page.
because, user can read summary without pager.
but, we can use more pages for --help even if we want to write more or all.
big paper isn't necessary absolutely.
Updated by nobu (Nobuyoshi Nakada) almost 14 years ago
fixed at r37818.
Updated by nobu (Nobuyoshi Nakada) almost 14 years ago
No rationale, no description but just failing test makes no sense.
File a ticket first.
Updated by nobu (Nobuyoshi Nakada) almost 14 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100