ruby.c: --help option

* ruby.c (usage, process_options): show more info in --help.
  [EXPREIMENTAL] [ruby-core:48072] [Bug #7184]


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@37298 b2dd03c8-39d4-4d8f-98ff-823fe69b080e